--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         
                         <!-- RECHTES DRITTEL BILD -->
                         <div class="hero-image-container">
-                             <img src="dancin.webp" alt="Cansin" onerror="this.src='cansin.jpeg'" loading="lazy">
+                             <img src="dancin.webp" alt="Cansin" onerror="this.src='cansin.webp'" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -462,39 +462,39 @@
                         <div class="laptop-wrapper">
                             <div class="laptop-mockup">
                                 <div class="laptop-screen">
-                                    <img src="ex1.jpg" alt="Referenzprojekt A" onerror="this.src='https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
+                                    <img src="ex1.webp" alt="Referenzprojekt A" onerror="this.src='https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
                                 </div>
                             </div>
                             <div class="laptop-base"></div>
                             <div class="showcase-caption">
-                                <h4>Automotive & Service</h4>
-                                <p>Implementierung eines digitalen Buchungssystems zur Prozessoptimierung.</p>
+                                <h4>Beispiel A: KFZ-Meisterbetrieb</h4>
+                                <p>Integrierte Terminbuchung spart täglich 2 Stunden Telefonzeit.</p>
                             </div>
                         </div>
 
                         <div class="laptop-wrapper">
                             <div class="laptop-mockup">
                                 <div class="laptop-screen">
-                                    <img src="ex2.jpg" alt="Referenzprojekt B" onerror="this.src='https://images.unsplash.com/photo-1481487484168-9b930d55208d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
+                                    <img src="ex2.webp" alt="Referenzprojekt B" onerror="this.src='https://images.unsplash.com/photo-1481487484168-9b930d55208d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
                                 </div>
                             </div>
                             <div class="laptop-base"></div>
                             <div class="showcase-caption">
-                                <h4>Corporate Dashboard</h4>
-                                <p>Interne Datenvisualisierung und Sales-Tracking in Echtzeit.</p>
+                                <h4>Beispiel B: Interne Plattform</h4>
+                                <p>Echtzeit-Dashboard für Mitarbeiter zur Verkaufsübersicht.</p>
                             </div>
                         </div>
 
                         <div class="laptop-wrapper">
                             <div class="laptop-mockup">
                                 <div class="laptop-screen">
-                                    <img src="ex3.jpg" alt="Referenzprojekt C" onerror="this.src='https://images.unsplash.com/photo-1556742049-0cfed4f7a07d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
+                                    <img src="ex3.webp" alt="Referenzprojekt C" onerror="this.src='https://images.unsplash.com/photo-1556742049-0cfed4f7a07d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
                                 </div>
                             </div>
                             <div class="laptop-base"></div>
                             <div class="showcase-caption">
-                                <h4>Healthcare Sector</h4>
-                                <p>Barrierefreier Zugang zu Patienteninformationen und Notdiensten.</p>
+                                <h4>Beispiel C: Moderne Arztpraxis</h4>
+                                <p>Sprechzeiten und Notdienst direkt sichtbar ohne Klicks.</p>
                             </div>
                         </div>
                     </div>
@@ -536,7 +536,7 @@
                     <!-- Zeile 1: Cansin Gülal -->
                     <div class="authority-row">
                         <div class="authority-img">
-                            <img src="cansin.jpeg" alt="Cansin Gülal" onerror="this.src='https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
+                            <img src="cansin.webp" alt="Cansin Gülal" onerror="this.src='https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
                         </div>
                         <div class="authority-content-frame">
                             <div class="profile-frame">
@@ -551,7 +551,7 @@
                     <!-- Zeile 2: David Leipi -->
                     <div class="authority-row">
                         <div class="authority-img">
-                            <img src="dl.jpg" alt="David Leipi" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
+                            <img src="david.webp" alt="David Leipi" onerror="this.src='https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80'" loading="lazy">
                         </div>
                         <div class="authority-content-frame">
                             <div class="profile-frame">
